--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Vault"/>
 	<classpathentry kind="lib" path="/home/joe/Documents/Java Libs/bukkit-1.5.2-R1.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/MyTown"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Minecraft"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/forgeperms"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
