Fixed a crash if there was no chat handler registered with Vault.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MyTown_Bukkit_Bridge</name>
+	<name>ForgePermsCBBridge</name>
 	<comment></comment>
 	<projects>
 	</projects>
