--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: ForgePermsCBBridge
 main: com.sperion.forgeperms.cbbridge.Bridge
-version: "1.1.7c"
+version: "1.1.8"
 author: legobear154
 description: Bridge for ForgePerms and Vault for Bukkit
 depend: [Vault]
