--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: ForgePermsCBBridge
-main: com.sperion.forgeperms.cbbridge.Bridge
+main: forgeperms.cbbridge.Bridge
 version: "1.1.14"
 author: legobear154
 description: Bridge for ForgePerms and Vault for Bukkit
