Fixed up the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-*.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-bin/*
-class/*
-/build
-/bin
+.settings
+.classpath
+.project
+.gradle
+.idea
+.syntastic_javac_config
+.vim.local
+eclipse
+bin
+build
